# jbr_shared_texture_demo

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  linux_utils.cpp  linux_utils.h  metal_utils.h  metal_utils.mm  org_example_NativeHelpers.cpp  org_example_NativeHelpers.h  windows_utils.cpp  windows_utils.h
src/main/java/org/example/: Main.java  NativeDataBuffer.java  NativeHelpers.java  RasterWrapper.java  VolatileImagePanel.java
src/main/java/org/example/ui/: BasePanel.java  ImagePanel.java  TexturePanel.java  TextureToBufferedImagePanel.java  TextureToVolatileImage.java
